force-app/main/default/objects/Card__c/fields/card_no__c.field-meta.xml
<CustomField>
    <fullName>card_no__c</fullName>
    <label>card_no</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>