force-app/main/default/objects/Card__c/fields/expiry_date__c.field-meta.xml
<CustomField>
    <fullName>expiry_date__c</fullName>
    <label>expiry_date</label>
    <type>Date</type>
</CustomField>